WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169807
RealtimeIncomingAudioSource is not stopping properly
https://bugs.webkit.org/show_bug.cgi?id=169807
Summary
RealtimeIncomingAudioSource is not stopping properly
youenn fablet
Reported
2017-03-16 21:09:37 PDT
There is a typo in RealtimeIncomingAudioSource::stopProducingData which prevents it from stopping.
Attachments
Patch
(4.36 KB, patch)
2017-03-16 21:11 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(5.95 KB, patch)
2017-03-16 21:14 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-elcapitan-wk2
(903.68 KB, application/zip)
2017-03-16 22:28 PDT
,
Build Bot
no flags
Details
Patch
(4.36 KB, patch)
2017-03-16 22:36 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-03-16 21:11:31 PDT
Created
attachment 304749
[details]
Patch
youenn fablet
Comment 2
2017-03-16 21:14:43 PDT
Created
attachment 304750
[details]
Patch
youenn fablet
Comment 3
2017-03-16 21:16:18 PDT
Test is not exercising the potential crash path, but should be close to it so this is a worthwhile addition anyway.
Build Bot
Comment 4
2017-03-16 22:28:13 PDT
Comment on
attachment 304750
[details]
Patch
Attachment 304750
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/3346552
New failing tests: webrtc/libwebrtc/release-after-getting-track.html
Build Bot
Comment 5
2017-03-16 22:28:16 PDT
Created
attachment 304756
[details]
Archive of layout-test-results from ews105 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
youenn fablet
Comment 6
2017-03-16 22:36:37 PDT
Created
attachment 304757
[details]
Patch
WebKit Commit Bot
Comment 7
2017-03-17 10:16:54 PDT
Comment on
attachment 304757
[details]
Patch Clearing flags on attachment: 304757 Committed
r214108
: <
http://trac.webkit.org/changeset/214108
>
WebKit Commit Bot
Comment 8
2017-03-17 10:17:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug