RealtimeIncomingAudioSource is not stopping properly https://bugs.webkit.org/show_bug.cgi?id=169807

Patch by Youenn Fablet <youenn@apple.com> on 2017-03-17
Reviewed by Eric Carlson.

Source/WebCore:

Test: webrtc/release-after-getting-track.html

* platform/mediastream/mac/RealtimeIncomingAudioSource.cpp:
(WebCore::RealtimeIncomingAudioSource::~RealtimeIncomingAudioSource):
(WebCore::RealtimeIncomingAudioSource::stopProducingData):

LayoutTests:

* webrtc/release-after-getting-track-expected.txt: Added.
* webrtc/release-after-getting-track.html: Added.

Canonical link: https://commits.webkit.org/186768@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214108 268f45cc-cd09-0410-ab3c-d52691b4dbfc